• Inserts redirect location into the DOM • Fixes overflow issue with the user header in IE

--- a/assets/_styles/components/user-header.scss
+++ b/assets/_styles/components/user-header.scss
@@ -6,9 +6,10 @@
 */
 
 .user-header {
-  overflow: auto;
+  width: 100%;
   padding: 1em 0;
   margin-bottom: .5em;
+  float: left;
 }
 
 .user-menu {
